{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 690,
  "lineage": "181bf957-2847-0f56-77ee-4e0efa1794ce",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4de3ea38a26aa97",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0f25934de574551b5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f25934de574551b5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Eng-48-common-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb0007f48e56ca68",
            "private_dns": "ip-10-0-4-31.eu-west-1.compute.internal",
            "private_ip": "10.0.4.31",
            "public_ip": "34.243.165.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ba493d854b369652",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091083d5170a9569f",
            "tags": {
              "name": "Eng48-app-db1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d92cfc6c8b99f17d"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.db.aws_security_group.db_security_group",
            "module.db.aws_subnet.db_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4de3ea38a26aa97",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0b88b24d36112ca23",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b88b24d36112ca23",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Eng-48-common-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a74522c864ebc475",
            "private_dns": "ip-10-0-5-245.eu-west-1.compute.internal",
            "private_ip": "10.0.5.245",
            "public_ip": "34.253.210.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ce1ff5625dfa091",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a70cee229aad75c",
            "tags": {
              "name": "Eng48-app-db2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d92cfc6c8b99f17d"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.db.aws_security_group.db_security_group",
            "module.db.aws_subnet.db_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4de3ea38a26aa97",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0be897515c72f33f9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0be897515c72f33f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Eng-48-common-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4aac56a9acd943d",
            "private_dns": "ip-10-0-6-143.eu-west-1.compute.internal",
            "private_ip": "10.0.6.143",
            "public_ip": "54.171.93.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08b3e0d934aaf6e96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c48f8e3bae7a3086",
            "tags": {
              "name": "Eng48-app-db3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d92cfc6c8b99f17d"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.db.aws_security_group.db_security_group",
            "module.db.aws_subnet.db_subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04606c4026446c652",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/app-lb-eng48/3db665c7d91fea7c",
            "arn_suffix": "app/app-lb-eng48/3db665c7d91fea7c",
            "dns_name": "app-lb-eng48-2026484241.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/app-lb-eng48/3db665c7d91fea7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb-eng48",
            "security_groups": [
              "sg-029c0e26bb9aace2d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-047e822e315cff930"
              },
              {
                "subnet_id": "subnet-059b9ba7d7db86522"
              },
              {
                "subnet_id": "subnet-0dcd81bb93f741045"
              }
            ],
            "subnets": [
              "subnet-047e822e315cff930",
              "subnet-059b9ba7d7db86522",
              "subnet-0dcd81bb93f741045"
            ],
            "tags": {
              "Name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.app.aws_subnet.public_one",
            "module.app.aws_subnet.public_three",
            "module.app.aws_subnet.public_two"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/app-lb-eng48/3db665c7d91fea7c/5a8e24729a974379",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng48-tg/0c2b1b6d23843bf8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/app-lb-eng48/3db665c7d91fea7c/5a8e24729a974379",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/app-lb-eng48/3db665c7d91fea7c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.app.aws_subnet.public_one",
            "module.app.aws_subnet.public_three",
            "module.app.aws_subnet.public_two",
            "module.load_balancer.aws_lb.app_lb",
            "module.load_balancer.aws_lb_target_group.app_tg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng48-tg/0c2b1b6d23843bf8",
            "arn_suffix": "targetgroup/Eng48-tg/0c2b1b6d23843bf8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng48-tg/0c2b1b6d23843bf8",
            "lambda_multi_value_headers_enabled": false,
            "name": "Eng48-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea023cc581182097",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04606c4026446c652",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_association_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038a66f5b1a936880",
            "route_table_id": "rtb-0ea023cc581182097",
            "subnet_id": "subnet-0dcd81bb93f741045"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.public_one"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_association_three",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a69a552e0c6f76d",
            "route_table_id": "rtb-0ea023cc581182097",
            "subnet_id": "subnet-059b9ba7d7db86522"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.public_three"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_association_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dedb260988c90ff",
            "route_table_id": "rtb-0ea023cc581182097",
            "subnet_id": "subnet-047e822e315cff930"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.public_two"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_dm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-029c0e26bb9aace2d",
            "description": "Allow 80 TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029c0e26bb9aace2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_security_dm",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Eng48-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0d92cfc6c8b99f17d",
            "description": "Allow inbound traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d92cfc6c8b99f17d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029c0e26bb9aace2d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029c0e26bb9aace2d"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029c0e26bb9aace2d"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Eng48-app_db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Eng48-app_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-091083d5170a9569f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-091083d5170a9569f",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app - DB Subnet1"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-00a70cee229aad75c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00a70cee229aad75c",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app - DB Subnet2"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0c48f8e3bae7a3086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c48f8e3bae7a3086",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app - DB Subnet3"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0dcd81bb93f741045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dcd81bb93f741045",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_three",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-059b9ba7d7db86522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-059b9ba7d7db86522",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-047e822e315cff930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-047e822e315cff930",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "name": "Eng48-app"
            },
            "vpc_id": "vpc-0cd21fc4d26c316b5"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0cd21fc4d26c316b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bebc59c6f0677ee3",
            "default_route_table_id": "rtb-02c2625f894f34f30",
            "default_security_group_id": "sg-0c0bb86baea8d5e17",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cd21fc4d26c316b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c2625f894f34f30",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-app"
            }
          }
        }
      ]
    }
  ]
}